--- a/themes/perplex/layouts/partials/nav/masthead.html
+++ b/themes/perplex/layouts/partials/nav/masthead.html
@@ -8,7 +8,7 @@
 <div class="ctrl ctrl-right" id="l-ctrl">
   {{/*{{- partial "nav/masthead/social.html" . -}}*/}}
     {{- partial "nav/masthead/menu-main-social" . }}
-    {{- partial "nav/button/search.html" . -}}
+    {{/*- partial "nav/button/search.html" . -*/}}
     {{- partial "nav/button/toc.html" . -}}
     {{- partial "nav/toc-walk-headings.html" . -}}
 </div>
