--- a/themes/perplex/layouts/partials/nav/button/sidebar.html
+++ b/themes/perplex/layouts/partials/nav/button/sidebar.html
@@ -1,3 +1,3 @@
-{{- if eq .Type "doc" -}}
+{{- if eq .Type "patterns" -}}
 <button id="tgl-sb" class="ctrl__button" title="Open sidebar" aria-label="Open sidebar"><span class="icon icon--material"></span></button>
 {{- end -}}
