--- a/layouts/patterns/list.html
+++ b/layouts/patterns/list.html
@@ -22,8 +22,7 @@
           {{- partial "title/title.html" . }}
           {{- partial "title/subtitle.html" . }}
         </div>
-        <aside class="featured-image">{{ partial "img/featured.html" . }}</aside>
-      </header>
+<!-- <aside class="featured-image">{{ partial "img/featured.html" . }}</aside> -->      </header>
       {{- with .Content }}
       <div class="md md--sans md--h-sans md--list md--margin-doc">
         {{- partial "replacements.html" . -}}
