remove updated date

--- a/themes/perplex/layouts/doc/list.html
+++ b/themes/perplex/layouts/doc/list.html
@@ -46,7 +46,7 @@
   <footer class="page-footer margin-doc">
     <div class="meta meta--foot">
       {{- partial "nav/breadcrumbs/footer.html" . }}
-      {{- partial "date/updated.html" . }}
+      <!-- {{- partial "date/updated.html" . }} -->
     </div>
     <hr>
     {{- partial "doc/nav/pages.html" . }}
