bring back side menu

--- a/layouts/patterns/list.html
+++ b/layouts/patterns/list.html
@@ -1,6 +1,4 @@
-{{- define "sidebar" }}
-{{/* No author aside here */}}
-{{ end -}}
+{{- define "sidebar" }}{{ partial "doc/nav/sidebar.html" . }}{{ end -}}
 {{- define "main" -}}
 <div id="l-content-box" class="l-box l-box--doc">
   <div id="l-content">
