--- a/layouts/partials/author-aside.html
+++ b/layouts/partials/author-aside.html
@@ -15,4 +15,13 @@
       <a href="https://github.com/ntcoding" target="_blank" rel="noopener">GitHub</a>
     </div>
   </div>
+  
+  <div class="author-aside-card__cta">
+    <svg class="separator-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M19 9L12 16L5 9" stroke="#0072b1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+    <h3>Share Your Experience</h3>
+    <p>Have you successfully modernized legacy systems? We'd love to feature your patterns and case studies.</p>
+    <a href="/contribute" class="cta-button">Contribute</a>
+  </div>
 </aside>
