--- a/layouts/partials/author-aside.html
+++ b/layouts/partials/author-aside.html
@@ -22,6 +22,6 @@
     </svg>
     <h3>Share Your Experience</h3>
     <p>Have you successfully modernized legacy systems? We'd love to feature your patterns and case studies.</p>
-    <a href="/contribute" class="cta-button">Contribute</a>
+    <a href="https://github.com/ntcoding/legacy-modernization-io#contributing-guidelines" class="cta-button" target="_blank">Contribute</a>
   </div>
 </aside>
