--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -42,8 +42,10 @@
             <a href="{{ .RelPermalink }}" aria-label="Read more…">
               {{ if eq $i 0 }}
                 <img src="/patterns/migration/strangler-fig/strangler-feature.png" alt="Strangler Fig Pattern" style="width:280px; height:250px; object-fit:cover; border-radius:0.7rem; background:#e0e0e0; display:block; margin:0 auto 1.5rem auto;" />
+              {{ else if eq $i 1 }}
+                <img src="/patterns/migration/bubble/bubble-feature.png" alt="Bubble image" style="width:280px; height:250px; object-fit:cover; border-radius:0.7rem; background:#e0e0e0; display:block; margin:0 auto 1.5rem auto;" />
               {{ else }}
-                <img src="/patterns/magicpattern-ixxjruC7Gg4-unsplash.png" alt="Pattern image" style="width:280px; height:250px; object-fit:cover; border-radius:0.7rem; background:#e0e0e0; display:block; margin:0 auto 1.5rem auto;" />
+                <img src="/content/home/welcome-to-legacy-modernization/resource-database-jRDZ4_wYCa8-unsplash.jpg" alt="Legacy event republishing image" style="width:280px; height:250px; object-fit:cover; border-radius:0.7rem; background:#e0e0e0; display:block; margin:0 auto 1.5rem auto;" />
               {{ end }}
             </a>
             <div class="card__content" style="width: 100%; padding: 5px; background-color: var(--c-bg-2); box-shadow: none; display: flex; flex-direction: column; justify-content: space-between;">
