--- a/layouts/partials/author-aside.html
+++ b/layouts/partials/author-aside.html
@@ -6,7 +6,7 @@
     <div class="author-aside-card__name">Nick Tune</div>
     <div class="author-aside-card__title">Senior Staff Engineer</div>
     <div class="author-aside-card__bio">
-      Nick Tune is a Senior Staff Engineer at PayFit and the author of <em>"Architecture Modernization"</em> (Manning), with a passion for helping organizations modernize their software systems.
+      Nick Tune is a Senior Staff Engineer at PayFit and the author of <em>"Architecture Modernization"</em> (Manning). He loves helping organizations to turn their legacy systems into competitive advantage.
     </div>
     <div class="author-aside-card__links">
       <a href="https://www.linkedin.com/company/legacy-modernization-io" target="_blank" rel="noopener">LinkedIn</a>
