--- a/themes/perplex/_vendor/github.com/bowman2001/hugo-mod-meta/layouts/partials/head/meta/opengraph.html
+++ b/themes/perplex/_vendor/github.com/bowman2001/hugo-mod-meta/layouts/partials/head/meta/opengraph.html
@@ -11,14 +11,16 @@
 {{ with partial "head/partial.html" (dict "partial" $desc_partial "page" . ) -}}
   <meta property="og:description" content="{{ . }}">
 {{ end }}
-{{ with partial "head/partial.html" (dict "partial" $image_partial "page" . ) -}}
-    {{- if (partial "head/meta/func/twitter/is-img-valid.html" . ) -}}
-      <meta property="og:image:url" content="{{ .Permalink }}">
-      <meta property="og:image:width" content="{{ .Width }}">
-      <meta property="og:image.height" content="{{ .Height }}">
-      <meta property="og:image:type" content="{{ .MediaType }}">
-    {{- end -}}
-{{ end -}}
+{{ $img := partial "head/partial.html" (dict "partial" $image_partial "page" . ) }}
+{{ if $img }}
+  {{ $imgPermalink := $img.Permalink | default $img }}
+  <meta property="og:image" content="{{ $imgPermalink }}">
+  {{ with $img.Width }}<meta property="og:image:width" content="{{ . }}">{{ end }}
+  {{ with $img.Height }}<meta property="og:image:height" content="{{ . }}">{{ end }}
+  {{ with $img.MediaType }}<meta property="og:image:type" content="{{ . }}">{{ end }}
+{{ else }}
+  <meta property="og:image" content="/og-default.svg">
+{{ end }}
 {{ with .Permalink -}}
   <meta property="og:url" content="{{ . }}">{{ end -}}
 {{ with site.Title -}}
