--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,2 +1,5 @@
 {{- partial "head/og-logo.html" . }}
-// ...existing code...
+{{- partial "head/meta/standard.html" . }}
+{{- partial "head/meta/description.html" . }}
+{{- partial "head/meta/opengraph.html" . }}
+{{- partial "head/meta/schema.html" . -}}
