--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -89,7 +89,7 @@
       </a>
     </div>
     <div style="text-align: center; margin-top: 3rem;">
-      <a href="https://www.youtube.com/channel/UCJZfIQhHYYYlpGTnrj3uKQA" target="_blank" style="font-size: 1.65rem; color: #0077b6; font-weight: 600; text-decoration: underline; display: inline-block; padding: 0.5rem 1rem;">View all videos →</a>
+      <a href="/learn/" target="_self" style="font-size: 1.65rem; color: #0077b6; font-weight: 600; text-decoration: underline; display: inline-block; padding: 0.5rem 1rem;">View all videos →</a>
     </div>
   </div>
 </section>
