--- a/layouts/patterns/single.html
+++ b/layouts/patterns/single.html
@@ -4,7 +4,7 @@
 {{- define "main" }}
 <div id="l-content-box" class="l-box l-box--full">
   <article id="l-content" data-pagefind-body>
-    <header class="page-header page-header--left">
+    <header class="page-header">
       <div class="title title--sans">
         <hr>
         {{- partial "file/vscode_start.html" .Page }}
